--- a/style.css
+++ b/style.css
@@ -56,10 +56,11 @@ h1 {
   box-shadow: 2px 2px 2px black;
 
   display: grid;
+  grid-template-rows: repeat(5, auto) 1fr;
   gap: 0.25rem;
   justify-items: center;
   text-align: center;
-  align-content: start;
+  /* align-content: start; */
 
   height: 100%;
 
@@ -77,6 +78,33 @@ h1 {
     -webkit-line-clamp: 2;     /* Show only # lines */
     overflow: hidden;          /* Hide the rest of the content */
     text-overflow: ellipsis;   /* Show ellipsis (...) */
+  }
+
+  .del-button {
+    align-self: end;
+
+    margin: 0 0 0 auto;
+    box-shadow: none;
+    background-color: rgba(255, 255, 255, 0);
+    padding: 0;
+    border-radius: 50%;
+    color: black;
+    font-weight: 100;
+    
+    --hw: 1.5rem;
+    height: var(--hw);
+    width: var(--hw);
+    /* text-align: center; */
+
+    display: grid;
+    /* align-items: center; */
+    align-content: center;
+
+    &:hover {
+      /* outline: black solid 1px; */
+      outline: none;
+      background-color: lightgrey;
+    }
   }
 
 }
@@ -102,6 +130,7 @@ h1 {
   -webkit-line-clamp: 4;     /* Show only # lines */
   overflow: hidden;          /* Hide the rest of the content */
   text-overflow: ellipsis;   /* Show ellipsis (...) */
+
 
 }
 
