Clean and polish code. Minor styling. Refine js functions.

--- a/reset.css
+++ b/reset.css
@@ -45,5 +45,5 @@ p, h1, h2, h3, h4, h5, h6 {
 a {
     appearance: none;
     color: inherit;
-    text-decoration: inherit;
+    text-decoration: none;
 }
