--- a/style.css
+++ b/style.css
@@ -2,16 +2,11 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-a {
-  appearance: none;
-  color: inherit;
-  text-decoration: none;
-}
-
 body {
   background-image: url(images/ed-robertson-eeSdJfLfx1A-unsplash.jpg);
-  background-repeat: none;
-  background-size:cover;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   box-sizing: border-box;
 
   padding: 1rem 5rem 0; 
@@ -20,7 +15,6 @@ body {
   flex-direction: column;
   justify-content: center;
 
-  min-height: 200vh;
   min-width: min-content;
 }
 
@@ -30,42 +24,36 @@ h1 {
   padding: 0.75rem 4rem;
   margin: 0 auto 1.5rem;
   border: white solid 5px;
-  width: fit-content;
+  min-width: calc(min-content - 1rem);
   background-color: rgba(0, 0, 0, 0.482);
 
   text-align: center;
-
 }
 
 #book-cards {
-
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   gap: 1rem;
 
   margin-bottom: 2rem;
-
 }
-
 
 .book-card {
   padding: 1rem;
   border-radius: 1rem;
   background-color: rgba(255, 255, 255, 0.863);
-  border: dodgerblue solid 5px;
   box-shadow: 2px 2px 2px black;
-
+  
   display: grid;
   grid-template-rows: repeat(5, auto) 1fr;
   gap: 0.25rem;
   justify-items: center;
   text-align: center;
-  /* align-content: start; */
-
+  
   height: 100%;
-
+  
   &:hover {
-    transform: scale(1.01);
+    outline: dodgerblue solid 5px;
   }
 
   * {
@@ -75,7 +63,7 @@ h1 {
     /* from MDN */
     display: -webkit-box;      /* Use WebKit box layout model */
     -webkit-box-orient: vertical; /* Vertical box orientation */
-    -webkit-line-clamp: 2;     /* Show only # lines */
+    -webkit-line-clamp: 1;     /* Show only # lines */
     overflow: hidden;          /* Hide the rest of the content */
     text-overflow: ellipsis;   /* Show ellipsis (...) */
   }
@@ -83,7 +71,7 @@ h1 {
   .del-button {
     align-self: end;
 
-    margin: 0 0 0 auto;
+    margin: 0 -0.75rem -0.75rem auto;
     box-shadow: none;
     background-color: rgba(255, 255, 255, 0);
     padding: 0;
@@ -94,84 +82,77 @@ h1 {
     --hw: 1.5rem;
     height: var(--hw);
     width: var(--hw);
-    /* text-align: center; */
 
     display: grid;
-    /* align-items: center; */
     align-content: center;
+    justify-content: center;
+    padding-top: 1px;
 
     &:hover {
-      /* outline: black solid 1px; */
       outline: none;
       background-color: lightgrey;
     }
   }
 
-  
-
-}
-
-.title {
-  font-size: x-large;
-  text-decoration: underline;
-  font-weight: bold;
-
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-.author {
-  font-style: italic;
-}
-
-.haveRead {
-  font-weight: bold;
-  box-shadow: none;
-  padding: 0 0.5rem;
-
-  &:hover {
-    transform: none;
+  .title {
+    font-size: large;
+    text-decoration: underline;
+    
+    &:hover {
+      cursor: pointer;
+      font-weight: bold;
+    }
   }
   
-  &.haveReadTrue {
-    background-color: green;    
+  .author {
+    font-style: italic;
   }
   
-  &.haveReadFalse {
-    background-color: red;    
+  button.haveRead {
+    font-weight: bold;
+    box-shadow: none;
+    padding: 0 0.5rem;
+      
+    &:hover {
+      transform: none;
+    }
+    
+    &.haveReadTrue {
+      background-color: green; 
+      
+      &:hover {
+        outline: green solid 2px;
+      }
+    }
+    
+    &.haveReadFalse {
+      background-color: red;  
+      
+      &:hover {
+        outline: red solid 2px;
+      } 
+    }
   }
-
-
-
-}
-
-.notes {
-  /* from MDN */
-  display: -webkit-box;      /* Use WebKit box layout model */
-  -webkit-box-orient: vertical; /* Vertical box orientation */
-  -webkit-line-clamp: 4;     /* Show only # lines */
-  overflow: hidden;          /* Hide the rest of the content */
-  text-overflow: ellipsis;   /* Show ellipsis (...) */
-
-
+  
+  .notes {
+    /* from MDN */
+    display: -webkit-box;      /* Use WebKit box layout model */
+    -webkit-box-orient: vertical; /* Vertical box orientation */
+    -webkit-line-clamp: 4;     /* Show only # lines */
+    overflow: hidden;          /* Hide the rest of the content */
+    text-overflow: ellipsis;   /* Show ellipsis (...) */
+  }
 }
 
 .button-and-form-section {
-  flex-grow: 1;
   display: grid;
 
   align-content: start;
+  height: 500px;
 }
 
-
 button {
-
-  /* display: none; */
-
-
   font-size: large;
-  appearance: none;
   margin: auto;
   padding: 1rem 1.5rem;
   border: none;
@@ -181,33 +162,25 @@ button {
   color: white;
   box-shadow: 2px 2px 2px black;
 
-
-
   &:hover {
     cursor: pointer;
-    outline: black solid 2px;
     transform: scale(1.02);
-    
   }
 } 
 
-form {
-  
+form {  
   background-color: rgba(255, 255, 255, 0.863);
   border-radius: 1rem;
 
   box-shadow: 2px 2px 2px black;
-  width: fit-content;
+  min-width: min-content;
   margin: auto;
-
-  display: grid;
-
-  padding: 1rem;
-
 
   fieldset {
     margin: 0.75rem 1.25rem 1.25rem;
-    padding: 1rem;
+    padding: 0;
+
+    display: grid;
   }
 
   legend {
@@ -216,17 +189,15 @@ form {
     padding: 0 0.5rem;
   }
 
-
   .form-line {
     padding: 0.5rem 2rem;
 
     display: grid;
     grid-auto-flow: column;
-    gap: 1rem;
+    gap: 0.5rem;
     justify-content: center;
 
     label {
-      /* outline: red solid 1px; */
       width: 4rem;
       text-align: end;
 
@@ -267,11 +238,11 @@ form {
         color: green;
         font-weight: bold;
       }
-    
     }
 
     textarea {
       padding: 0 0.25rem;
+      margin-right: 1.25rem;
 
       &:hover, &:focus {
         outline: black solid 1px;
@@ -279,12 +250,16 @@ form {
       }
     }
   }
-}
 
+  #submit-book-btn {
+    justify-self: center;
+    margin: 1rem 0 1.5rem;
+  }
+}
 
 .footer {
   color: white;
-  margin: auto;
+  text-align: center;
 
   a {
     text-decoration: underline;
